# CSE155-Gesture-Enhanced-Dictation

./: .gitignore  Cargo.toml  README.md  audio-timestamps.py  compose.yml  tts.py
.github/workflows/: punctuation-inference.yml
disregard/: app.py  convert_to_tflite.py  requirements.txt
gesture-recognition/: Dockerfile  README.md  app.py  gestureTracker.py  gestureTrackerFoundation.py  keypoint_classification.ipynb  keypoint_classification_EN.ipynb  requirements.dev.txt  requirements.txt
gesture-recognition/model/: keypoint_classifier_saved_model.h5  keypoint_classifier_saved_model.keras
gesture-recognition/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.keras  keypoint_classifier.py  keypoint_classifier.tflite
gesture-recognition/utils/: cvfpscalc.py  draw.py  events.py
hand-gesture-recognition-mediapipe-main/: keypoint_classification.ipynb
hand-gesture-recognition-mediapipe-main/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.keras  keypoint_classifier_label.csv
punctuation-inference/: Cargo.toml  Docker-Cargo.toml  Dockerfile
punctuation-inference/src/: events.rs  lib.rs  main.rs  redis.rs
speech-to-text/: Dockerfile  audio-timestamps.py  main.py  requirements.txt  tts.py
