[package]
name = "punctuation-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pretty_assertions = "1.4"
rstest = "0.22"
either = "1.13.0"
redis = "0.27.5"
# tokio = { version = "1.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
